# fitoria

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  gen_codecov.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js  vcpkg.json
doc/: README.md
example/: CMakeLists.txt
example/encoding/base64/: CMakeLists.txt  base64.cpp
example/http_server/: CMakeLists.txt  extractor.cpp  form.cpp  json.cpp  middleware.cpp  query_string.cpp  quick_start.cpp  route_parameter.cpp  router_group.cpp
example/http_server/basic_http_server/: CMakeLists.txt  basic_http_server.cpp
example/http_server/quick_start/: CMakeLists.txt  quick_start_http_server.cpp
example/include/: fitoria_certificate.h
example/web/: CMakeLists.txt  extractor.cpp  file.cpp  form.cpp  getting_started.cpp  graceful_shutdown.cpp  json.cpp  method.cpp  middleware.cpp  path_parameter.cpp  query_string.cpp  quick_start.cpp  response.cpp  route_parameter.cpp  router_group.cpp  scope.cpp  state.cpp  testing.cpp  thread_pool.cpp  tls.cpp  unittesting.cpp  unix_domain_socket.cpp  websocket.cpp
example/web/advanced/: CMakeLists.txt
example/web/basic/: CMakeLists.txt  file.cpp  graceful_shutdown.cpp  method.cpp  middleware.cpp  query_string.cpp  scope.cpp  static_file.cpp  testing.cpp  thread_pool.cpp  unix_domain_socket.cpp
example/web/extractor/: CMakeLists.txt  form_of.cpp  path_of.cpp  query_of.cpp  state_of.cpp
test/: CMakeLists.txt  basic_router_group_test.cpp  basic_router_tree_test.cpp  dummy_test.cpp  fitoria_certificate.h  fitoria_http_server_utils.h  fitoria_simple_http_client.h  fitoria_test.h  handler_chain_test.cpp  handlers_invoker_test.cpp  http_server_test.cpp  router_group_test.cpp  router_tree_test.cpp
test/client/: CMakeLists.txt  http_client_test.cpp  test_client_error.cpp  test_client_http_client.cpp  test_client_http_client_io_context.cpp  test_client_http_client_tls.cpp
test/core/: CMakeLists.txt  expected_test.cpp  fixed_string_test.cpp  optional_test.cpp  test_dynamic_buffer.cpp  test_expected.cpp  test_fixed_string.cpp  test_from_string.cpp  test_net.cpp  test_net_io_context.cpp  test_optional.cpp  test_strings.cpp  test_type_traits.cpp  type_traits_test.cpp
test/core/expected/: CMakeLists.txt  test_expected.cpp  test_expected_lref.cpp  test_expected_void.cpp
test/core/optional/: CMakeLists.txt  test_optional.cpp  test_optional_lref.cpp  test_optional_void.cpp
test/encoding/: CMakeLists.txt  base64_test.cpp  test_encoding_base64.cpp
test/http/: CMakeLists.txt  test_http_field.cpp  test_http_fields.cpp  test_http_header.cpp  test_http_header_map.cpp  test_http_status_code.cpp  test_http_version.cpp
test/http/header/: CMakeLists.txt  test_http_header_date.cpp  test_http_header_entity_tag.cpp  test_http_header_if_none_match.cpp  test_http_header_last_modified.cpp  test_http_header_range.cpp
test/http_server/: CMakeLists.txt  basic_router_group_test.cpp  basic_router_tree_test.cpp  handlers_invoker_test.cpp  http_header_test.cpp  http_message_test.cpp  http_response_test.cpp  http_route_test.cpp  http_server_request_test.cpp  http_server_response_test.cpp  http_server_test.cpp  http_server_tls_test.cpp  http_server_unittest_test.cpp  middleware_test.cpp
test/http_server/middleware/: CMakeLists.txt  logger_test.cpp  mw_exception_handler_test.cpp  mw_logger_test.cpp
test/include/: fitoria_certificate.h  fitoria_http_server_utils.h  fitoria_simple_http_client.h  fitoria_test.h  fitoria_test_utils.h
test/log/: CMakeLists.txt  log_level_test.cpp  logger_test.cpp  test_log_async_stdout_writer.cpp  test_log_async_stdout_writer_io_context.cpp  test_log_async_stream_file_writer.cpp  test_log_filter.cpp  test_log_formatter.cpp  test_log_level.cpp  test_log_log.cpp  test_log_log_level.cpp  test_log_sync_stdout_writer.cpp  test_log_sync_stream_file_writer.cpp
test/mime/: CMakeLists.txt  test_mime_mime_view.cpp  test_mime_name_view.cpp  test_mime_params_view.cpp
test/web/: CMakeLists.txt  as_form_test.cpp  as_json_test.cpp  basic_chain_invoker_test.cpp  basic_route_test.cpp  basic_router_group_test.cpp  basic_router_test.cpp  basic_router_tree_test.cpp  basic_scope_test.cpp  compile_time_path_checker_test.cpp  connection_info_test.cpp  extractor_test.cpp  handlers_invoker_test.cpp  http_client_test.cpp  http_fields_test.cpp  http_header_test.cpp  http_message_test.cpp  http_response_test.cpp  http_route_test.cpp  http_server_test.cpp  http_server_tls_test.cpp  http_server_unittest_test.cpp  json_test.cpp  match_pattern_test.cpp  middleware_test.cpp  path_matcher_test.cpp  pattern_matcher_test.cpp  query_map_test.cpp  route_params_test.cpp  route_test.cpp  router_test.cpp  scope_test.cpp  segments_view_test.cpp  share_state_test.cpp  state_map_test.cpp  test_web_as_form.cpp  test_web_async_readable_stream.cpp  test_web_compile_time_path_checker.cpp  test_web_connect_info.cpp  test_web_connection_info.cpp  (+28 more)
test/web/extractor/: CMakeLists.txt  extractor_json_test.cpp
test/web/http/: CMakeLists.txt  http_test.cpp  status_code_test.cpp  test_web_http_http.cpp  test_web_http_status_code.cpp  test_web_http_version.cpp  test_web_status_code.cpp
test/web/middleware/: CMakeLists.txt  mw_compression_test.cpp  mw_deflate_test.cpp  mw_exception_handler_test.cpp  mw_gzip_test.cpp  mw_logger_test.cpp  mw_zlib_test.cpp  test_web_middleware_decompress.cpp  test_web_middleware_deflate.cpp  test_web_middleware_detail_brotli.cpp  test_web_middleware_detail_brotli_error.cpp  test_web_middleware_detail_deflate.cpp  test_web_middleware_detail_gzip.cpp  test_web_middleware_exception_handler.cpp  test_web_middleware_gzip.cpp  test_web_middleware_logger.cpp
test/web/server/: CMakeLists.txt  test_web_http_server_builder.cpp  test_web_http_server_exception_handler.cpp  test_web_http_server_io_context.cpp  test_web_http_server_keep_alive.cpp  test_web_http_server_limit.cpp  test_web_http_server_local_socket.cpp  test_web_http_server_misc.cpp  test_web_http_server_request.cpp  (+2 more)
test/win32/: CMakeLists.txt  test_web_win32_header.cpp  win32_header_test.cpp
(+576 files in other folders)
