file(GLOB FITORIA_TESTS_SOURCE_FILES "*_test.cpp")

foreach(file ${FITORIA_TESTS_SOURCE_FILES})
  get_filename_component(file_name ${file} NAME)
  string(REPLACE ".cpp" "" target_name ${file_name})
  add_executable(${target_name} ${file})
  target_include_directories(${target_name} PRIVATE .)
  fitoria_target_compile_option(${target_name})
  target_link_libraries(${target_name} PRIVATE doctest::doctest)
  add_test(${target_name} ${target_name})
endforeach()
