fitoria_add_example(NAME file SRCS file.cpp)
fitoria_add_example(NAME getting_started SRCS getting_started.cpp)
fitoria_add_example(NAME graceful_shutdown SRCS graceful_shutdown.cpp)
fitoria_add_example(NAME method SRCS method.cpp)
fitoria_add_example(NAME middleware SRCS middleware.cpp)
fitoria_add_example(NAME query_string SRCS query_string.cpp)
fitoria_add_example(NAME path_parameter SRCS path_parameter.cpp)
fitoria_add_example(NAME response SRCS response.cpp)
fitoria_add_example(NAME scope SRCS scope.cpp)
fitoria_add_example(NAME state SRCS state.cpp)
fitoria_add_example(NAME thread_pool SRCS thread_pool.cpp)
fitoria_add_example(NAME tls SRCS tls.cpp)
fitoria_add_example(NAME unittesting SRCS unittesting.cpp)
fitoria_add_example(NAME unix_domain_socket SRCS unix_domain_socket.cpp)
fitoria_add_example(NAME websocket SRCS websocket.cpp)

add_subdirectory(extractor)
